# Restaurant-Management

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: Home.py
app/components/: charts.py  database.py  filters.py  insights.py
app/pages/: 1_Executive_Overview.py  2_Menu_Engineering.py  3_Channel_Profitability.py  4_Service_Performance.py  5_Labour_Productivity.py  6_Inventory_Risk.py  7_Customer_Experience.py  8_Demand_Forecast.py
config/: business_rules.yaml  logging.yaml  simulation.yaml
data/seed/: employees.csv  ingredients.csv  menu_items.csv  recipes.csv  suppliers.csv
dbt_restaurant/: dbt_project.yml  profiles.yml.example
dbt_restaurant/macros/: generate_schema_name.sql
dbt_restaurant/seeds/: channel_reference.csv
dbt_restaurant/tests/: assert_inventory_balance_never_negative.sql  assert_order_items_quantity_positive.sql  assert_orders_financial_reconciliation.sql  assert_orders_monetary_values_non_negative.sql  assert_reviews_rating_in_range.sql  assert_shift_end_after_shift_start.sql
docs/: algorithms.md  architecture.md  business_rules.md  data_dictionary.md  development_log.md  interview_talking_points.md  limitations.md  project_decisions.md  screenshots.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
realtime/: main.py
scripts/: generate_data.py  load_raw_data.py
src/restaurant_ops/: __init__.py  config.py  logging_config.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_daily_context.py  test_forecasting.py  test_inventory.py  (+6 more)
(+74 files in other folders)
