[project]
name = "restaurant-ops"
version = "0.1.0"
description = "Vietnamese Restaurant Operations Intelligence Platform: synthetic data generation, dbt transformations, and a Streamlit analytics application."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb>=1.1",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "streamlit>=1.38",
    "pandas>=2.2",
    "plotly>=5.24",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/restaurant_ops"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
